--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,17 @@
   --main-background-color: #ffffff;
 }
 
+body {
+  background: var(--main-background-color);
+  font-family: Roboto, sans-serif;
+
+  letter-spacing: 0.03em;
+}
+
 /*Студия*/
 
+/*Hero*/
 .hero {
-  font-family: Roboto, sans-serif;
   letter-spacing: 0.06em;
 
   text-align: center;
@@ -30,18 +37,11 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87x;
-
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
 }
-
-.section {
-  font-family: Roboto, sans-serif;
-}
+/*Раздел - Виимание к деталям*/
 
 .work {
   font-size: 14px;
-  letter-spacing: 0.03em;
 
   list-style: none;
 }
@@ -49,7 +49,6 @@
 .work-title {
   font-weight: 700;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 
   color: var(--primary-text-color);
@@ -60,21 +59,23 @@
 
   color: var(--secondary-text-color);
 }
+/*Раздел - Чем мы занимаемся*/
 
 .section-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
 }
 
+.section-photo {
+  list-style: none;
+}
+/* Раздел - Наша команда */
 .section-photo .name,
 .section-photo .job {
-  list-style: none;
-
   font-size: 16px;
   line-height: 1.19;
 
@@ -91,12 +92,10 @@
 
   color: var(--secondary-text-color);
 }
+
 /* Страничка Портфолио */
 
-body {
-  background: var(--main-background-color);
-}
-
+/* Логотип*/
 .logo-primary {
   color: var(--accent-color);
 }
@@ -105,12 +104,13 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
 
   text-decoration: none;
 
   color: var(--primary-text-color);
 }
+
+/* Header navigation*/
 
 .link {
   text-decoration: none;
@@ -135,10 +135,13 @@ body {
 
 .site-nav .link:hover,
 .site-nav .link:focus,
+.site-auth .link:hover,
+.site-auth .link:focus,
 .site-nav .link.current {
   color: var(--accent-color);
 }
 
+/* Cписок кнопок*/
 .table {
   display: inline-flex;
   list-style: none;
@@ -150,16 +153,18 @@ body {
   font-size: 16px;
   line-height: 1.63;
 
-  letter-spacing: 0.03em;
-
   color: var(--primary-text-color);
 }
 
 .site-nav .primary:hover,
-.site-nav .primary:focus {
+.site-nav .primary:focus,
+.hero .primary:focus,
+.hero .primary:hover {
   color: var(--primary-white-color);
   background: var(--accent-color);
 }
+
+/* Картинки с описанием*/
 
 .photo-post {
   font-weight: 700;
@@ -176,11 +181,10 @@ body {
   font-size: 16px;
   line-height: 1.9;
 
-  letter-spacing: 0.03em;
-
   color: var(--secondary-text-color);
 }
 
+/* Footer*/
 footer {
   background: #2f303a;
 }
@@ -192,8 +196,6 @@ footer {
   font-size: 26px;
   line-height: 1.19;
 
-  letter-spacing: 0.03em;
-
   color: var(--primary-white-color);
 
   text-decoration: none;
@@ -203,8 +205,6 @@ footer {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
-
-  letter-spacing: 0.03em;
 }
 
 address {
