--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
   --main-background-color: #ffffff;
+  --secondary-background-color: #2f303a;
+  --adress-color: rgba(255, 255, 255, 0.6);
 }
 
 body {
@@ -21,7 +23,7 @@ body {
 
   text-align: center;
   color: var(--primary-white-color);
-  background: #2f303a;
+  background: var(--secondary-background-color);
 }
 
 .hero-title {
@@ -188,7 +190,7 @@ body {
 
 /* Footer*/
 footer {
-  background: #2f303a;
+  background: var(--secondary-background-color);
 }
 
 .logo-sec {
@@ -219,7 +221,7 @@ address {
 }
 
 .address-footer {
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--adress-color);
 
   text-decoration: none;
 }
