--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body {
   font-size: 16px;
   line-height: 1.63;
 
-  color: var(--primary-text-color);
+  /*color: var(--primary-text-color);*/
 }
 
 .site-nav .primary:hover,
